bug fixes: mobile font size; mobile overflow visibility; inquiries view height

--- a/css/my-website.index.css
+++ b/css/my-website.index.css
@@ -77,7 +77,8 @@
   }
 
   @media screen and (max-width: 768px){
-    nav {
+    body {
+      max-width: 100%;
       overflow-x: hidden;
     }
     .nav-links {
@@ -90,10 +91,8 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
-      /* padding-top: 10px;
-      padding-bottom: 20px; */
       transform: translateX(100%);
-      transition: transform 0.8s ease-in;
+      transition: transform 0.6s ease-in;
     }
     .nav-links li {
       opacity: 0;
@@ -137,7 +136,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    font-size: max(4vw);
+    font-size: max(25px);
     color: #0e2240;
     background-color: #ffffff;
     background-image: url("../pictures/white-brick-wall.png");
@@ -158,9 +157,9 @@
     text-decoration: none;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (max-width: 768px) {
     #welcome-section {
-      font-size: 25px;
+      font-size: 18px;
     }
   }
 
@@ -233,7 +232,7 @@
     background-image: url("../pictures/white-brick-wall.png");
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 20px;
+    grid-gap: 25px;
     padding: 2rem;
   }
 
@@ -285,7 +284,7 @@
     align-items: center;
     background-color: #ffffff;
     background-image: url("../pictures/white-brick-wall.png");
-    height: 100vh;
+    min-height: 100vh;
     color: #0E2240;
     font-size: large;
   }
@@ -392,7 +391,7 @@
   }
 
   
-  /* BOTTOM */
+  /* BOTTOM
 
   #bottom {
     display: flex;
@@ -413,7 +412,7 @@
     color: #fec524;
     background-color: transparent; 
     text-decoration: none;
-  }
+  } */
 
   /* FOOTER */
 
